--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta content="text/html;charset=UTF-8" http-equiv="Content-type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="Ralph Modejski" name="keywords">
     <title>RALPH MODJESKI - Bridge builder in America</title>
     <meta name="description" content="RALPH MODJESKI tribute page">
     <meta name="author" content="Dariusz Duda">
@@ -16,11 +18,13 @@
         <button class="menu-element-list openbtn">&#9776;</button>
         <div class="menu-element-list"><h2 class="nav-title"><strong>TRIBUTE PAGE</strong></h2></div>
     </div>
-    <div class="header-cta"><a class="header-ctaLink non-mobile" href="">GitHub</a></div>
+    <div class="header-cta"><a class="header-ctaLink non-mobile"
+                               href="https://github.com/DarekRepos/tribute-to-Ralph-Modejski" rel="noopener">GitHub</a>
+    </div>
 </header>
 <nav class="sidenav">
+    <button class="closebtn">x</button>
     <ul>
-        <button class="closebtn">x</button>
         <li><a href="#main">Home</a></li>
         <li><a href="#tribute-info">Life</a></li>
         <li><a href="#did-you-know">Did You Know?</a></li>
