--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta content="text/html;charset=UTF-8" http-equiv="Content-type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="Ralph Modejski" name="keywords">
     <title>RALPH MODJESKI - Bridge builder in America</title>
@@ -32,7 +31,7 @@
     </ul>
     <div class="header-cta"><a class="header-ctaLink mobile" href="">GitHub</a></div>
 </nav>
-<main id="main" role="main">
+<main id="main">
     <article>
         <div class="header-triangle"></div>
         <h1 id="title">Ralph Modejski</h1>
