--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="#did-you-know">Did You Know?</a></li>
         <li><a href="#projects">Notable projects</a></li>
     </ul>
-    <div class="header-cta"><a class="header-ctaLink mobile" href="">GitHub</a></div>
+    <div class="header-cta"><a class="header-ctaLink mobile" href="https://github.com/DarekRepos/tribute-to-Ralph-Modejski" rel="noopener">GitHub</a></div>
 </nav>
 <main id="main">
     <article>
